--- a/style.css
+++ b/style.css
@@ -7,6 +7,26 @@
   box-sizing: border-box;
 }
 
+input {
+  font: inherit;
+  border: none;
+}
+
+button {
+  border: none;
+  background-color: initial;
+  outline: none; /* don't forget indicator for focus state */
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 /* BASE STYLES */
 .page {
   font-family: "Poppins", sans-serif;
@@ -24,21 +44,100 @@
 }
 
 .app {
-  height: 1030px;
   width: 1240px;
+  height: 1030px;
   background-color: #fff;
-  box-shadow: 0 25px 150px rgba(0, 0, 0, 0.65);
-  margin: 80px 0px;
+  /* box-shadow: 0 30px 100px rgba(0, 0, 0, 0.35); */
+  box-shadow: 0 25px 150px rgba(0, 0, 0, 0.65); /* looks better */
+  margin: 80px 0;
 
   display: grid;
   grid-template-columns: 355px 1fr;
   grid-template-rows: 65px 724px 1fr;
 }
 
-/*  STYLES */
+/* STYLES */
 .header {
   grid-column: 1 / 3;
   grid-row: 1 / 2;
+
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  margin-left: 26px;
+  margin-right: 48px;
+}
+
+.search {
+  position: relative;
+}
+
+.search__input {
+  background-color: #eef3f4;
+  height: 34px;
+  width: 405px;
+  border-radius: 500px;
+  font-size: 13px;
+  color: #555a5b;
+  padding-left: 20px;
+  outline: none;
+  transition: all 0.2s;
+}
+
+.search__input:focus {
+  width: 425px;
+}
+
+.search__input::placeholder {
+  color: #a9b4b7;
+}
+
+.search__submit {
+  font-size: 15px;
+  color: #a9b4b7;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: absolute;
+  right: 13px;
+  top: 8px;
+}
+
+.search__submit:focus {
+  color: #555a5b;
+}
+
+.search__icon {
+}
+
+.nav {
+  margin-left: auto;
+}
+
+.nav__list {
+  display: flex;
+}
+
+.nav__item {
+}
+
+.nav__link {
+  padding: 0 20px;
+  transition: all 0.2s;
+  height: 65px;
+  display: block;
+}
+
+.nav__link:hover,
+.nav__link:focus {
+  background-color: #eef3f4;
+}
+
+.nav__icon {
+  color: #a9b4b7;
+  font-size: 22px;
+  line-height: 65px;
 }
 
 .sidebar {
@@ -50,6 +149,7 @@
 
 .gallery {
   background-color: #eef3f4;
+
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
