--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,11 @@
-/* RESET */
+// VARIABLES
+$color-grey-light: #eef3f4;
+$color-grey-medium: #a9b4b7;
+$color-grey-dark: #555a5b;
+
+$ts: all 0.2s;
+
+// RESET
 *,
 *::before,
 *::after {
@@ -15,7 +22,7 @@ input {
 button {
   border: none;
   background-color: initial;
-  outline: none; /* don't forget indicator for focus state */
+  outline: none; // don't forget indicator for focus state
 }
 
 ul {
@@ -27,7 +34,7 @@ a {
   text-decoration: none;
 }
 
-/* BASE STYLES */
+// BASE STYLES
 .page {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
@@ -37,18 +44,18 @@ a {
   background-image: url(https://bytegrad.com/course-assets/css/2/pattern.svg),
     linear-gradient(to bottom right, #8fd861, #2cc695 90%);
   scrollbar-width: none;
-}
 
-.page::-webkit-scrollbar {
-  display: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .app {
   width: 1240px;
   height: 1030px;
   background-color: #fff;
-  /* box-shadow: 0 30px 100px rgba(0, 0, 0, 0.35); */
-  box-shadow: 0 25px 150px rgba(0, 0, 0, 0.65); /* looks better */
+  // box-shadow: 0 30px 100px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 25px 150px rgba(0, 0, 0, 0.65); // looks better
   margin: 80px 0;
 
   display: grid;
@@ -56,7 +63,7 @@ a {
   grid-template-rows: 65px 724px 1fr;
 }
 
-/* STYLES */
+// STYLES
 .header {
   grid-column: 1 / 3;
   grid-row: 1 / 2;
@@ -72,72 +79,72 @@ a {
 
 .search {
   position: relative;
-}
 
-.search__input {
-  background-color: #eef3f4;
-  height: 34px;
-  width: 405px;
-  border-radius: 500px;
-  font-size: 13px;
-  color: #555a5b;
-  padding-left: 20px;
-  outline: none;
-  transition: all 0.2s;
-}
+  &__input {
+    background-color: $color-grey-light;
+    height: 34px;
+    width: 405px;
+    border-radius: 500px;
+    font-size: 13px;
+    color: $color-grey-dark;
+    padding-left: 20px;
+    outline: none;
+    transition: $ts;
 
-.search__input:focus {
-  width: 425px;
-}
+    &:focus {
+      width: 425px;
+    }
 
-.search__input::placeholder {
-  color: #a9b4b7;
-}
+    &::placeholder {
+      color: $color-grey-medium;
+    }
+  }
 
-.search__submit {
-  font-size: 15px;
-  color: #a9b4b7;
-  cursor: pointer;
-  transition: all 0.2s;
-  position: absolute;
-  right: 13px;
-  top: 8px;
-}
+  &__submit {
+    font-size: 15px;
+    color: $color-grey-medium;
+    cursor: pointer;
+    transition: $ts;
+    position: absolute;
+    right: 13px;
+    top: 8p;
 
-.search__submit:focus {
-  color: #555a5b;
-}
+    &:focus {
+      color: $color-grey-dark;
+    }
+  }
 
-.search__icon {
+  &__icon {
+  }
 }
 
 .nav {
   margin-left: auto;
-}
 
-.nav__list {
-  display: flex;
-}
+  &__list {
+    display: flex;
+  }
 
-.nav__item {
-}
+  &__item {
+  }
 
-.nav__link {
-  padding: 0 20px;
-  transition: all 0.2s;
-  height: 65px;
-  display: block;
-}
+  &__link {
+    padding: 0 20px;
+    transition: $ts;
+    height: 65px;
+    display: block;
 
-.nav__link:hover,
-.nav__link:focus {
-  background-color: #eef3f4;
-}
+    &:hover,
+    &:focus {
+      background-color: $color-grey-light;
+    }
+  }
 
-.nav__icon {
-  color: #a9b4b7;
-  font-size: 22px;
-  line-height: 65px;
+  &__icon {
+    color: $color-grey-medium;
+    font-size: 22px;
+    line-height: 65px;
+  }
 }
 
 .sidebar {
@@ -148,7 +155,7 @@ a {
 }
 
 .gallery {
-  background-color: #eef3f4;
+  background-color: $color-grey-light;
 
   grid-column: 2 / 3;
   grid-row: 2 / 3;
