--- a/src/main.scss
+++ b/src/main.scss
@@ -42,6 +42,7 @@ a {
     opacity: 0;
     transform: translateY(20px);
   }
+
   100% {
     opacity: 1;
     transform: translateY(0);
@@ -89,13 +90,22 @@ a {
   width: 1240px;
   height: 1030px;
   background-color: #fff;
-  // box-shadow: 0 30px 100px rgba(0, 0, 0, 0.35);
-  box-shadow: 0 25px 150px rgba(0, 0, 0, 0.65); // looks better
+  /* box-shadow: 0 30px 100px rgba(0, 0, 0, 0.35); */
+  box-shadow: 0 25px 150px rgba(0, 0, 0, 0.65); /* looks better */
   margin: 80px 0;
 
   display: grid;
   grid-template-columns: 355px 1fr;
   grid-template-rows: 65px 724px 1fr;
+
+  @media (max-width: 1300px) {
+    width: 100%;
+    margin: 0;
+  }
+
+  @media (max-width: 355px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 // STYLES
@@ -114,6 +124,10 @@ a {
 
 .search {
   position: relative;
+
+  @media (max-width: 815px) {
+    display: none;
+  }
 
   &__input {
     background-color: $color-grey-light;
@@ -142,7 +156,7 @@ a {
     transition: $ts;
     position: absolute;
     right: 13px;
-    top: 8p;
+    top: 8px;
 
     &:focus {
       color: $color-grey-dark;
@@ -182,18 +196,23 @@ a {
   }
 }
 
-/// --------------------------------------
+// ------------------
 
 .sidebar {
   background-color: #11271f;
 
   grid-column: 1 / 2;
   grid-row: 2 / 4;
+
+  @media (max-width: 580px) {
+    grid-column: 1 / -1;
+  }
 }
 
 .intro {
   padding: 48px 35px 45px;
   border-bottom: 1px solid rgba(#fff, 0.1);
+
   &__text {
     color: $color-grey-light;
     font-size: 16px;
@@ -207,12 +226,17 @@ a {
   text-transform: uppercase;
   font-size: 34px;
   line-height: 1;
+
+  @media (max-width: 355px) {
+    font-size: 31px;
+  }
 }
 
 .social {
   display: flex;
   justify-content: center;
   margin: 25px 0 30px;
+
   &__img {
     height: 35px;
     width: 35px;
@@ -267,6 +291,7 @@ a {
   &:focus {
     background-color: #119267;
   }
+
   &__icon {
     margin-left: 2px;
   }
@@ -284,8 +309,8 @@ a {
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     transition: $ts;
     position: relative;
     overflow: hidden;
@@ -343,17 +368,30 @@ a {
   font-size: inherit;
 }
 
-/// --------------------------------------
+// ------------------
 
 .gallery {
-  background-color: $color-grey-light;
-
+  background-color: #eef3f4;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 272px 60px 90px 64px 30px 208px;
+
+  @media (max-width: 1130px) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (max-width: 815px) {
+    grid-row: 2 / 4;
+    grid-template-rows: 272px 60px 90px 64px 30px 208px 1fr;
+    grid-template-columns: 1fr;
+  }
+
+  @media (max-width: 580px) {
+    display: none;
+  }
 
   &__img-wrapper {
     position: relative;
@@ -363,46 +401,73 @@ a {
       grid-row: 1 / 3;
       animation: fade-in 1s 0.1s backwards;
     }
+
     &:nth-child(2) {
       grid-column: 2 / 3;
       grid-row: 1 / 4;
       animation: fade-in 1s 0.2s backwards;
+
+      @media (max-width: 815px) {
+        display: none;
+      }
     }
+
     &:nth-child(3) {
       grid-column: 3 / 4;
       grid-row: 1 / 2;
       animation: fade-in 1s 0.3s backwards;
+
+      @media (max-width: 1130px) {
+        display: none;
+      }
     }
+
     &:nth-child(4) {
       grid-column: 1 / 2;
       grid-row: 3 / 6;
       animation: fade-in 1s 0.4s backwards;
     }
+
     &:nth-child(5) {
       grid-column: 2 / 3;
       grid-row: 4 / -1;
       animation: fade-in 1s 0.5s backwards;
+
+      @media (max-width: 815px) {
+        display: none;
+      }
     }
+
     &:nth-child(6) {
       grid-column: 3 / 4;
       grid-row: 2 / 5;
       animation: fade-in 1s 0.6s backwards;
+
+      @media (max-width: 1130px) {
+        display: none;
+      }
     }
+
     &:nth-child(7) {
       grid-column: 1 / 2;
       grid-row: 6 / -1;
       animation: fade-in 1s 0.7s backwards;
     }
+
     &:nth-child(8) {
       grid-column: 3 / 4;
       grid-row: 5 / -1;
       animation: fade-in 1s 0.8s backwards;
+
+      @media (max-width: 1130px) {
+        display: none;
+      }
     }
   }
 
   &__img {
-    width: 100%;
     height: 100%;
+    width: 100%;
     object-fit: cover;
   }
 
@@ -413,18 +478,22 @@ a {
     padding: 4px 10px;
     border-radius: 500px;
     position: absolute;
+
     &--1 {
       top: 15px;
       right: 15px;
     }
+
     &--2 {
       bottom: 15px;
       right: 15px;
     }
+
     &--3 {
       top: 15px;
       left: 15px;
     }
+
     &--4 {
       bottom: 15px;
       left: 15px;
@@ -443,7 +512,7 @@ a {
   }
 }
 
-/// --------------------------------------
+// ------------------
 
 .steps {
   background-color: #e7edee;
@@ -453,11 +522,22 @@ a {
 
   display: flex;
   align-items: center;
+
+  @media (max-width: 815px) {
+    display: none;
+  }
 }
 
 .step {
   text-align: center;
   padding: 0 20px;
+
+  &:nth-child(3) {
+    @media (max-width: 960px) {
+      display: none;
+    }
+  }
+
   &__icon {
     font-size: 20px;
     height: 50px;
@@ -481,8 +561,8 @@ a {
   }
 
   &__text {
-    font-size: 12px;
     color: $color-grey-dark;
+    font-size: 12px;
     line-height: 1.8;
   }
 }
