--- a/style.css
+++ b/style.css
@@ -73,11 +73,23 @@ a {
   width: 1240px;
   height: 1030px;
   background-color: #fff;
-  box-shadow: 0 25px 150px rgba(0, 0, 0, 0.65);
+  /* box-shadow: 0 30px 100px rgba(0, 0, 0, 0.35); */
+  box-shadow: 0 25px 150px rgba(0, 0, 0, 0.65); /* looks better */
   margin: 80px 0;
   display: grid;
   grid-template-columns: 355px 1fr;
   grid-template-rows: 65px 724px 1fr;
+}
+@media (max-width: 1300px) {
+  .app {
+    width: 100%;
+    margin: 0;
+  }
+}
+@media (max-width: 355px) {
+  .app {
+    grid-template-columns: 1fr;
+  }
 }
 
 .header {
@@ -94,6 +106,11 @@ a {
 
 .search {
   position: relative;
+}
+@media (max-width: 815px) {
+  .search {
+    display: none;
+  }
 }
 .search__input {
   background-color: #eef3f4;
@@ -119,7 +136,7 @@ a {
   transition: all 0.2s;
   position: absolute;
   right: 13px;
-  top: 8p;
+  top: 8px;
 }
 .search__submit:focus {
   color: #555a5b;
@@ -150,6 +167,11 @@ a {
   grid-column: 1/2;
   grid-row: 2/4;
 }
+@media (max-width: 580px) {
+  .sidebar {
+    grid-column: 1/-1;
+  }
+}
 
 .intro {
   padding: 48px 35px 45px;
@@ -167,6 +189,11 @@ a {
   text-transform: uppercase;
   font-size: 34px;
   line-height: 1;
+}
+@media (max-width: 355px) {
+  .first-heading {
+    font-size: 31px;
+  }
 }
 
 .social {
@@ -235,8 +262,8 @@ a {
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   transition: all 0.2s;
   position: relative;
   overflow: hidden;
@@ -288,6 +315,23 @@ a {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 272px 60px 90px 64px 30px 208px;
 }
+@media (max-width: 1130px) {
+  .gallery {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 815px) {
+  .gallery {
+    grid-row: 2/4;
+    grid-template-rows: 272px 60px 90px 64px 30px 208px 1fr;
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 580px) {
+  .gallery {
+    display: none;
+  }
+}
 .gallery__img-wrapper {
   position: relative;
 }
@@ -301,10 +345,20 @@ a {
   grid-row: 1/4;
   animation: fade-in 1s 0.2s backwards;
 }
+@media (max-width: 815px) {
+  .gallery__img-wrapper:nth-child(2) {
+    display: none;
+  }
+}
 .gallery__img-wrapper:nth-child(3) {
   grid-column: 3/4;
   grid-row: 1/2;
   animation: fade-in 1s 0.3s backwards;
+}
+@media (max-width: 1130px) {
+  .gallery__img-wrapper:nth-child(3) {
+    display: none;
+  }
 }
 .gallery__img-wrapper:nth-child(4) {
   grid-column: 1/2;
@@ -316,10 +370,20 @@ a {
   grid-row: 4/-1;
   animation: fade-in 1s 0.5s backwards;
 }
+@media (max-width: 815px) {
+  .gallery__img-wrapper:nth-child(5) {
+    display: none;
+  }
+}
 .gallery__img-wrapper:nth-child(6) {
   grid-column: 3/4;
   grid-row: 2/5;
   animation: fade-in 1s 0.6s backwards;
+}
+@media (max-width: 1130px) {
+  .gallery__img-wrapper:nth-child(6) {
+    display: none;
+  }
 }
 .gallery__img-wrapper:nth-child(7) {
   grid-column: 1/2;
@@ -331,9 +395,14 @@ a {
   grid-row: 5/-1;
   animation: fade-in 1s 0.8s backwards;
 }
+@media (max-width: 1130px) {
+  .gallery__img-wrapper:nth-child(8) {
+    display: none;
+  }
+}
 .gallery__img {
-  width: 100%;
   height: 100%;
+  width: 100%;
   object-fit: cover;
 }
 .gallery__comment {
@@ -377,10 +446,20 @@ a {
   display: flex;
   align-items: center;
 }
+@media (max-width: 815px) {
+  .steps {
+    display: none;
+  }
+}
 
 .step {
   text-align: center;
   padding: 0 20px;
+}
+@media (max-width: 960px) {
+  .step:nth-child(3) {
+    display: none;
+  }
 }
 .step__icon {
   font-size: 20px;
@@ -401,8 +480,8 @@ a {
   color: #1ea97b;
 }
 .step__text {
-  font-size: 12px;
   color: #555a5b;
+  font-size: 12px;
   line-height: 1.8;
 }
 
